minor fixes and rebase